# track-events

./: .gitignore  Cargo.toml  Makefile  README.md
sql/: 001_init.sql  100_testing_data.sql
track-events-ui/: Cargo.toml
track-events-ui/src/: app_state.rs  lib.rs
track-events-ui/src/commands/: mod.rs
track-events-ui/src/core/: events.rs  mod.rs
track-events-ui/src/database/: events.rs
track-events-ui/src/setup/: db.rs  mod.rs
track-events-ui/ui/: app-window.slint  logic.slint  store.slint  theme.slint  types.slint
track-events-ui/ui/components/: badge.slint  label.slint  tab_item.slint
track-events-ui/ui/pages/: insights.slint  library.slint  pages.slint  settings.slint  track.slint
track-events-ui/ui/pages/track/: details.slint  overview.slint  page.slint
track-events-ui/ui/store/: icons.slint
