[package]
name = "track-events-ui"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Habits tracking app"

[dependencies]
# Enable `gettext` feature if you need localization. Read about localizing slint apps here: https://docs.slint.dev/latest/docs/slint/guide/development/translations/
slint = { version = "1.14", features = [] }
time = "0.3"
tokio = { version = "1.45", features = ["full" ]}
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "sqlite", "time" ] }
anyhow = "*"
data-encoding = { version = "2.9" }

tracing = { version = "0.1", features = [] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dirs = "6.0"

[build-dependencies]
slint-build = "1.14"
